--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
           </div>
           <h4 id="author">sara jones</h4>
           <p id="job">ux designer</p>
+          <p class="info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut
+            modi harum a laboriosam cumque ad dignissimos architecto culpa porro
+            eos, iure quos quae nam sed atque libero alias commodi!
+          </p>
+          <!-- prev next buttons -->
+          <div class="button-container">
+            <button class="prev-btn">
+              <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="prev-btn">
+              <i class="fas fa-chevron-right"></i>
+            </button>
+          </div>
+          <button class="random-btn">suprise me</button>
         </article>
       </section>
     </main>
