--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
           <h4 id="author">sara jones</h4>
           <p id="job">ux designer</p>
-          <p class="info">
+          <p id="info">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut
             modi harum a laboriosam cumque ad dignissimos architecto culpa porro
             eos, iure quos quae nam sed atque libero alias commodi!
@@ -36,7 +36,7 @@
             <button class="prev-btn">
               <i class="fas fa-chevron-left"></i>
             </button>
-            <button class="prev-btn">
+            <button class="next-btn">
               <i class="fas fa-chevron-right"></i>
             </button>
           </div>
